--- a/src/main/resources/fxml/PlayerConfig.fxml
+++ b/src/main/resources/fxml/PlayerConfig.fxml
@@ -6,48 +6,46 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.collections.*?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #000099;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.byteme.Controllers.ConfigurationController">
-   <children>
-      <Label layoutX="192.0" layoutY="38.0" prefWidth="224.0" text="Player Configuration" textFill="RED">
-         <font>
-            <Font size="24.0" />
-         </font>
-      </Label>
-      <Label layoutX="39.0" layoutY="130.0" text="Name" textFill="RED" />
-      <Label layoutX="39.0" layoutY="190.0" text="Race" textFill="RED" />
-      <Label layoutX="39.0" layoutY="245.0" text="Color" textFill="RED" />
-      <TextField fx:id="playerName" layoutX="117.0" layoutY="125.0" prefHeight="11.0" prefWidth="249.0"/>
-      <ChoiceBox fx:id="playerRace" layoutX="117.0" layoutY="185.0" prefWidth="150.0" value="Flapper">
-         <items>
-            <FXCollections fx:factory="observableArrayList">
-               <String fx:value="Flapper" />
-               <String fx:value="Bonzoid" />
-               <String fx:value="Ugaite" />
-               <String fx:value="Buzzite" />
-               <String fx:value="Human" />
-            </FXCollections>
-         </items>
-      </ChoiceBox>
-      <Button fx:id="submitPlayer" defaultButton="true" layoutX="247.0" layoutY="314.0" mnemonicParsing="false" onAction="#savePlayerConfig" prefHeight="31.0" prefWidth="106.0" text="OK" />
-      <Separator layoutX="166.0" layoutY="72.0" prefHeight="3.0" prefWidth="275.0" />
-      <Separator layoutX="163.0" layoutY="37.0" prefHeight="3.0" prefWidth="275.0" />
-      <Label fx:id="playerNumber" layoutX="27.0" layoutY="38.0" prefHeight="35.0" prefWidth="87.0" text="Player 1" textFill="RED">
-         <font>
-            <Font size="24.0" />
-         </font>
-      </Label>
-      <ChoiceBox fx:id="playerColor" layoutX="117.0" layoutY="240.0" prefWidth="150.0" value="Red">
-         <items>
-            <FXCollections fx:id="playerColorOptions" fx:factory="observableArrayList">
-               <String fx:value="Red" />
-               <String fx:value="Orange" />
-               <String fx:value="Yellow" />
-               <String fx:value="Green" />
-               <String fx:value="Blue" />
-               <String fx:value="Purple" />
-               <String fx:value="Brown" />
-            </FXCollections>
-         </items>
-      </ChoiceBox>
-   </children>
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
+      prefWidth="600.0" style="-fx-background-color: #000099;" xmlns="http://javafx.com/javafx/8"
+      xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.byteme.Controllers.ConfigurationController">
+   <Label layoutX="192.0" layoutY="38.0" prefWidth="224.0" text="Player Configuration" textFill="RED">
+      <font>
+         <Font size="24.0"/>
+      </font>
+   </Label>
+   <Label layoutX="39.0" layoutY="130.0" text="Name" textFill="RED"/>
+   <Label layoutX="39.0" layoutY="190.0" text="Race" textFill="RED"/>
+   <Label layoutX="39.0" layoutY="245.0" text="Color" textFill="RED"/>
+   <TextField fx:id="playerName" layoutX="117.0" layoutY="125.0" prefHeight="11.0" prefWidth="249.0"/>
+   <ChoiceBox fx:id="playerRace" layoutX="117.0" layoutY="185.0" prefWidth="150.0" value="Flapper">
+      <FXCollections fx:factory="observableArrayList">
+         <String fx:value="Flapper"/>
+         <String fx:value="Bonzoid"/>
+         <String fx:value="Ugaite"/>
+         <String fx:value="Buzzite"/>
+         <String fx:value="Human"/>
+      </FXCollections>
+   </ChoiceBox>
+   <Button fx:id="submitPlayer" defaultButton="true" layoutX="247.0" layoutY="314.0" mnemonicParsing="false"
+           onAction="#savePlayerConfig" prefHeight="31.0" prefWidth="106.0" text="OK"/>
+   <Separator layoutX="166.0" layoutY="72.0" prefHeight="3.0" prefWidth="275.0"/>
+   <Separator layoutX="163.0" layoutY="37.0" prefHeight="3.0" prefWidth="275.0"/>
+   <Label fx:id="playerNumber" layoutX="27.0" layoutY="38.0" prefHeight="35.0" prefWidth="87.0" text="Player 1"
+          textFill="RED">
+      <font>
+         <Font size="24.0"/>
+      </font>
+   </Label>
+   <ChoiceBox fx:id="playerColor" layoutX="117.0" layoutY="240.0" prefWidth="150.0" value="Red">
+      <FXCollections fx:id="playerColorOptions" fx:factory="observableArrayList">
+         <String fx:value="Red"/>
+         <String fx:value="Orange"/>
+         <String fx:value="Yellow"/>
+         <String fx:value="Green"/>
+         <String fx:value="Blue"/>
+         <String fx:value="Purple"/>
+         <String fx:value="Brown"/>
+      </FXCollections>
+   </ChoiceBox>
 </Pane>
