--- a/src/main/resources/fxml/StartGame.fxml
+++ b/src/main/resources/fxml/StartGame.fxml
@@ -1,32 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.image.*?>
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#startGame" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #2C3E50;" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.byteme.Controllers.ConfigurationController">
-   <children>
-      <ImageView fitHeight="78.0" fitWidth="491.0" layoutX="55.0" layoutY="23.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../images/logo.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="20.0" fitWidth="338.0" layoutX="131.0" layoutY="328.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../images/clickanywhere.png" />
-         </image>
-      </ImageView>
-      <Text fill="WHITE" fontSmoothingType="LCD" layoutX="491.0" layoutY="383.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Copyright ByteMe">
-         <font>
-            <Font name="System Font Regular" size="10.0" />
-         </font>
-      </Text>
-      <ImageView fitHeight="163.0" fitWidth="220.0" layoutX="191.0" layoutY="119.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../images/horse.png" />
-         </image>
-      </ImageView>
-   </children>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#startGame"
+      prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #2C3E50;"
+      xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="com.byteme.Controllers.ConfigurationController">
+    <ImageView fitHeight="78.0" fitWidth="491.0" layoutX="55.0" layoutY="23.0" pickOnBounds="true"
+               preserveRatio="true">
+        <Image url="@../images/logo.png"/>
+    </ImageView>
+    <ImageView fitHeight="20.0" fitWidth="338.0" layoutX="131.0" layoutY="328.0" pickOnBounds="true"
+               preserveRatio="true">
+        <Image url="@../images/clickanywhere.png"/>
+    </ImageView>
+    <Text fill="WHITE" fontSmoothingType="LCD" layoutX="491.0" layoutY="383.0" strokeType="OUTSIDE" strokeWidth="0.0"
+          text="Copyright ByteMe">
+        <font>
+          <Font name="System Font Regular" size="10.0"/>
+        </font>
+    </Text>
+    <ImageView fitHeight="163.0" fitWidth="220.0" layoutX="191.0" layoutY="119.0" pickOnBounds="true"
+               preserveRatio="true">
+        <Image url="@../images/horse.png"/>
+    </ImageView>
 </Pane>
