--- a/src/main/resources/fxml/placeholder.fxml
+++ b/src/main/resources/fxml/placeholder.fxml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.text.*?>
-<?import javafx.scene.layout.*?>
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
 
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #000099;" xmlns="http://javafx.com/javafx/8.0.40" fx:controller="com.byteme.Controllers.ConfigurationController" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
-      <Label layoutX="193.0" layoutY="183.0" text="Under Construction!" textFill="RED">
-         <font>
-            <Font size="24.0" />
-         </font>
-      </Label>
-   </children>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
+      prefWidth="600.0" style="-fx-background-color: #000099;" xmlns="http://javafx.com/javafx/8.0.40"
+      fx:controller="com.byteme.Controllers.ConfigurationController" xmlns:fx="http://javafx.com/fxml/1">
+    <Label layoutX="193.0" layoutY="183.0" text="Under Construction!" textFill="RED">
+        <font>
+          <Font size="24.0"/>
+        </font>
+    </Label>
 </Pane>
