--- a/src/main/resources/fxml/LoadGame.fxml
+++ b/src/main/resources/fxml/LoadGame.fxml
@@ -1,21 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.text.Font?>
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
-      prefWidth="600.0" style="-fx-background-color: #2C3E50;" xmlns="http://javafx.com/javafx/8.0.40"
-      xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.byteme.Controllers.ConfigurationController">
-   <Button layoutX="64.0" layoutY="253.0" mnemonicParsing="false" onAction="#loadGameConfiguration" prefHeight="40.0"
-           prefWidth="115.0" text="Load Game"/>
-   <Button defaultButton="true" layoutX="421.0" layoutY="253.0" mnemonicParsing="false"
-           onAction="#newGameConfigureScreen" prefHeight="40.0" prefWidth="115.0" text="New Game"/>
-   <Label layoutX="64.0" layoutY="100.0" prefHeight="100.0" prefWidth="472.0"
-          text="Load old configuration settings or start new game?" textAlignment="CENTER" textFill="WHITE"
-          wrapText="true">
-      <font>
-         <Font name="System Bold" size="30.0"/>
-      </font>
-   </Label>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.text.*?>
+<?import javafx.scene.effect.*?>
+<?import javafx.scene.control.*?>
+<?import java.lang.*?>
+<?import javafx.scene.layout.*?>
+
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #2C3E50;" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.byteme.Controllers.ConfigurationController">
+   <children>
+      <Button layoutX="64.0" layoutY="253.0" mnemonicParsing="false" onAction="#loadGameConfiguration" prefHeight="40.0" prefWidth="115.0" text="Load Game" />
+      <Button defaultButton="true" layoutX="421.0" layoutY="253.0" mnemonicParsing="false" onAction="#newGameConfigureScreen" prefHeight="40.0" prefWidth="115.0" text="New Game" />
+      <Label layoutX="64.0" layoutY="100.0" prefHeight="100.0" prefWidth="472.0" text="Load old configuration settings or start new game?" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+         <font>
+            <Font name="System Bold" size="30.0" />
+         </font>
+      </Label>
+   </children>
 </Pane>
