--- a/src/main/resources/fxml/Map.fxml
+++ b/src/main/resources/fxml/Map.fxml
@@ -1,72 +1,67 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.text.*?>
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="784.0"
-      prefWidth="1313.0" style="-fx-background-color: #000099;" xmlns="http://javafx.com/javafx/8.0.40"
-      xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.byteme.Controllers.BoardController">
-    <GridPane fx:id="map" gridLinesVisible="true" hgap="10.0" layoutX="18.0" layoutY="21.0" maxHeight="-Infinity"
-              maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="580.0" prefWidth="1056.0"
-              style="-fx-border-color: Orange; -fx-border-width: 10px;" vgap="10.0">
-      <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-      </columnConstraints>
-      <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="100.0" vgrow="SOMETIMES"/>
-          <RowConstraints minHeight="10.0" prefHeight="100.0" vgrow="SOMETIMES"/>
-          <RowConstraints minHeight="10.0" prefHeight="100.0" vgrow="SOMETIMES"/>
-          <RowConstraints minHeight="10.0" prefHeight="100.0" vgrow="SOMETIMES"/>
-          <RowConstraints minHeight="10.0" prefHeight="100.0" vgrow="SOMETIMES"/>
-      </rowConstraints>
-        <opaqueInsets>
-          <Insets/>
-        </opaqueInsets>
-        <padding>
-          <Insets bottom="10.0" left="5.0" right="10.0" top="10.0"/>
-        </padding>
-    </GridPane>
-    <Button fx:id="pass" layoutX="1110.0" layoutY="648.0" mnemonicParsing="false" onAction="#passButtonClicked"
-            prefHeight="43.0" prefWidth="146.0" text="Pass">
-        <font>
-          <Font size="24.0"/>
-        </font>
-    </Button>
-    <Label fx:id="playerLabel" alignment="TOP_CENTER" contentDisplay="CENTER" layoutX="1090.0" layoutY="27.0"
-           prefHeight="122.0" prefWidth="146.0" text="Player 1" textFill="WHITE" wrapText="true">
-        <font>
-          <Font size="24.0"/>
-        </font>
-    </Label>
-    <Label fx:id="phaseLabel" layoutX="37.0" layoutY="648.0" prefHeight="51.0" prefWidth="527.0" text="Phase"
-           textFill="WHITE">
-        <font>
-          <Font size="24.0"/>
-        </font>
-    </Label>
-    <Label fx:id="moneyLabel" layoutX="1090.0" layoutY="102.0" prefHeight="21.0" prefWidth="186.0" text="MONEY:"
-           textFill="#39bf2a"/>
-    <Label fx:id="alertsLabel" layoutX="37.0" layoutY="699.0" prefHeight="51.0" prefWidth="527.0" text="Alerts"
-           textFill="RED">
-        <font>
-          <Font size="24.0"/>
-        </font>
-    </Label>
-    <Label fx:id="timerLabel" layoutX="1090.0" layoutY="138.0" prefHeight="21.5" prefWidth="186.5" text="TimeLeft:"
-           textFill="#bd882a">
-        <font>
-         <Font size="15.0"/>
-        </font>
-    </Label>
-    <Label fx:id="roundLabel" layoutX="1090.0" layoutY="200.0" prefHeight="21.0" prefWidth="186.0" text="ROUND:"
-           textFill="#39bf2a"/>
+<?import javafx.scene.effect.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import java.lang.*?>
+<?import javafx.scene.layout.*?>
+
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="784.0" prefWidth="1313.0" style="-fx-background-color: #000099;" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.byteme.Controllers.BoardController">
+   <children>
+      <GridPane fx:id="map" gridLinesVisible="true" hgap="10.0" layoutX="18.0" layoutY="21.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="580.0" prefWidth="1056.0" style="-fx-border-color: Orange; -fx-border-width: 10px;" vgap="10.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="100.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="100.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="100.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="100.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="100.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <opaqueInsets>
+            <Insets />
+         </opaqueInsets>
+         <padding>
+            <Insets bottom="10.0" left="5.0" right="10.0" top="10.0" />
+         </padding>
+      </GridPane>
+      <Button fx:id="pass" layoutX="1110.0" layoutY="648.0" mnemonicParsing="false" onAction="#passButtonClicked" prefHeight="43.0" prefWidth="146.0" text="Pass">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Button>
+      <Label fx:id="playerLabel" alignment="TOP_CENTER" contentDisplay="CENTER" layoutX="1090.0" layoutY="27.0" prefHeight="122.0" prefWidth="146.0" text="Player 1" textFill="WHITE" wrapText="true">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Label>
+      <Label fx:id="phaseLabel" layoutX="37.0" layoutY="648.0" prefHeight="51.0" prefWidth="527.0" text="Phase" textFill="WHITE">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Label>
+      <Label fx:id="moneyLabel" layoutX="1090.0" layoutY="102.0" prefHeight="21.0" prefWidth="186.0" text="MONEY:" textFill="#39bf2a" />
+      <Label fx:id="alertsLabel" layoutX="37.0" layoutY="699.0" prefHeight="51.0" prefWidth="527.0" text="Alerts" textFill="RED">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Label>
+       <Label fx:id="timerLabel" layoutX="1090.0" layoutY="138.0" prefHeight="21.5" prefWidth="186.5" text="TimeLeft:" textFill="#bd882a">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
+       <Label fx:id="roundLabel" layoutX="1090.0" layoutY="200.0" prefHeight="21.0" prefWidth="186.0" text="ROUND:" textFill="#39bf2a" />
+   </children>
 </Pane>
