--- a/src/main/resources/fxml/Town.fxml
+++ b/src/main/resources/fxml/Town.fxml
@@ -1,35 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.canvas.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.shape.Rectangle?>
-<?import javafx.scene.text.Font?>
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0"
-      prefWidth="935.0" style="-fx-background-color: #000099;" xmlns="http://javafx.com/javafx/8.0.40"
-      xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.byteme.Controllers.TownController">
-    <AnchorPane layoutX="104.0" layoutY="47.0" prefHeight="480.0" prefWidth="728.0"
-                style="-fx-background-color: #EFDD6F;">
-        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="133.0" layoutX="31.0" layoutY="22.0"
-                   stroke="BLACK" strokeType="INSIDE" width="241.0"/>
-        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="133.0" layoutX="465.0" layoutY="22.0"
-                   stroke="BLACK" strokeType="INSIDE" width="241.0"/>
-        <Rectangle fx:id="landoffice" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="133.0" layoutX="31.0"
-                   layoutY="308.0" stroke="BLACK" strokeType="INSIDE" width="241.0"/>
-        <Rectangle fx:id="pub" onMouseClicked="#goToPub" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE"
-                   height="133.0" layoutX="465.0" layoutY="298.0" stroke="BLACK" strokeType="INSIDE" width="241.0"/>
-        <Label layoutX="568.0" layoutY="354.0" text="Pub"/>
-        <Label layoutX="564.0" layoutY="78.0" text="Store"/>
-        <Label layoutX="114.0" layoutY="365.0" text="Land Office"/>
-        <Label layoutX="111.0" layoutY="78.0" text="Assay Office"/>
-        <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="45.0" layoutY="33.0" pickOnBounds="true"
-                   preserveRatio="true"/>
-    </AnchorPane>
-    <Button layoutX="704.0" layoutY="603.0" mnemonicParsing="false" onAction="#goToMap" text="Back to Map">
-        <font>
-          <Font size="24.0"/>
-        </font>
-    </Button>
-    <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true"/>
+<?import java.lang.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="935.0" style="-fx-background-color: #000099;" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.byteme.Controllers.TownController">
+   <children>
+      <AnchorPane layoutX="104.0" layoutY="47.0" prefHeight="480.0" prefWidth="728.0" style="-fx-background-color: #EFDD6F;">
+         <children>
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="133.0" layoutX="31.0" layoutY="22.0" stroke="BLACK" strokeType="INSIDE" width="241.0" />
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="133.0" layoutX="465.0" layoutY="22.0" stroke="BLACK" strokeType="INSIDE" width="241.0" />
+            <Rectangle fx:id="landoffice" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="133.0" layoutX="31.0" layoutY="308.0" stroke="BLACK" strokeType="INSIDE" width="241.0" />
+            <Rectangle fx:id="pub" onMouseClicked="#goToPub" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="133.0" layoutX="465.0" layoutY="298.0" stroke="BLACK" strokeType="INSIDE" width="241.0" />
+            <Label layoutX="568.0" layoutY="354.0" text="Pub" />
+            <Label layoutX="564.0" layoutY="78.0" text="Store" />
+            <Label layoutX="114.0" layoutY="365.0" text="Land Office" />
+            <Label layoutX="111.0" layoutY="78.0" text="Assay Office" />
+            <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="45.0" layoutY="33.0" pickOnBounds="true" preserveRatio="true" />
+         </children>
+      </AnchorPane>
+      <Button layoutX="704.0" layoutY="603.0" mnemonicParsing="false" onAction="#goToMap" text="Back to Map">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Button>
+      <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
+   </children>
 </Pane>
