--- a/src/main/resources/fxml/GameConfig.fxml
+++ b/src/main/resources/fxml/GameConfig.fxml
@@ -7,14 +7,14 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.collections.*?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #000099;" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.byteme.Controllers.ConfigurationController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #2C3E50;" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.byteme.Controllers.ConfigurationController">
    <children>
-      <Label layoutX="43.0" layoutY="115.0" text="Difficulty" textFill="RED">
+      <Label layoutX="43.0" layoutY="115.0" text="Difficulty" textFill="WHITE">
          <font>
             <Font size="24.0" />
          </font>
       </Label>
-      <Label layoutX="43.0" layoutY="263.0" text="Number of Players" textFill="RED">
+      <Label layoutX="43.0" layoutY="263.0" text="Number of Players" textFill="WHITE">
          <font>
             <Font size="24.0" />
          </font>
@@ -24,7 +24,7 @@
             <Font size="18.0" />
          </font>
       </Button>
-      <Label layoutX="364.0" layoutY="112.0" text="Map" textFill="RED">
+      <Label layoutX="364.0" layoutY="112.0" text="Map" textFill="WHITE">
          <font>
             <Font size="24.0" />
          </font>
@@ -33,26 +33,24 @@
          <items>
             <FXCollections fx:factory="observableArrayList">
                <String fx:value="Standard Map" />
-               <String fx:value="Map 2" />
-               <String fx:value="Map 3" />
                <String fx:value="Random Map" />
             </FXCollections>
          </items>
       </ChoiceBox>
       <Slider fx:id="numPlayersSlider" blockIncrement="1.0" layoutX="43.0" layoutY="318.0" majorTickUnit="1.0" max="4.0" min="2.0" minorTickCount="0" prefHeight="17.0" prefWidth="255.0" showTickMarks="true" snapToTicks="true" value="2.0" />
-      <Label layoutX="188.0" layoutY="37.0" text="Game Configurations" textFill="RED">
+      <Label layoutX="188.0" layoutY="37.0" text="Game Configuration" textFill="WHITE">
          <font>
             <Font size="24.0" />
          </font>
       </Label>
       <Separator layoutX="122.0" layoutY="36.0" prefHeight="2.0" prefWidth="373.0" />
       <Separator layoutX="122.0" layoutY="71.0" prefHeight="2.0" prefWidth="373.0" />
-      <RadioButton fx:id="difficultyEasy" layoutX="43.0" layoutY="160.0" mnemonicParsing="false" selected="true" text="Beginner" textFill="#fc0000">
+      <RadioButton fx:id="difficultyEasy" layoutX="43.0" layoutY="160.0" mnemonicParsing="false" selected="true" text="Beginner" textFill="WHITE">
          <toggleGroup>
             <ToggleGroup fx:id="DifficultyGroup" />
          </toggleGroup></RadioButton>
-      <RadioButton fx:id="difficultyNormal" layoutX="43.0" layoutY="191.0" mnemonicParsing="false" text="Normal" textFill="#fc0000" toggleGroup="$DifficultyGroup" />
-      <RadioButton fx:id="difficultyHard" layoutX="43.0" layoutY="219.0" mnemonicParsing="false" text="Tournament" textFill="#fc0000" toggleGroup="$DifficultyGroup" />
-      <Label layoutX="43.0" layoutY="345.0" prefHeight="21.0" prefWidth="255.0" text="  2                           3                          4" textFill="RED" />
+      <RadioButton fx:id="difficultyNormal" layoutX="43.0" layoutY="191.0" mnemonicParsing="false" text="Normal" textFill="WHITE" toggleGroup="$DifficultyGroup" />
+      <RadioButton fx:id="difficultyHard" layoutX="43.0" layoutY="219.0" mnemonicParsing="false" text="Tournament" textFill="WHITE" toggleGroup="$DifficultyGroup" />
+      <Label layoutX="43.0" layoutY="345.0" prefHeight="21.0" prefWidth="255.0" text="  2                           3                          4" textFill="WHITE" />
    </children>
 </Pane>
