Add Store Implementation

--- a/src/main/resources/fxml/Store.fxml
+++ b/src/main/resources/fxml/Store.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="935.0" style="-fx-background-color: #2C3E50;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.byteme.Controllers.PubController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="935.0" style="-fx-background-color: #2C3E50;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.byteme.Controllers.StoreController">
    <children>
            <Label fx:id="foodQuantity" layoutX="100.0" layoutY="210.0" prefHeight="100.0" prefWidth="246.0" text="Quantity: 16" textFill="WHITE">
                <font>
@@ -25,7 +25,7 @@
                    <Image url="@../images/food.png" />
                </image>
            </ImageView>
-           <Button layoutX="109.0" layoutY="315.0" mnemonicParsing="false" prefHeight="0.0" prefWidth="106.0" text="Buy Food">
+           <Button fx:id= "foodButton" layoutX="109.0" layoutY="315.0" mnemonicParsing="false" prefHeight="0.0" prefWidth="106.0" text="Buy Food">
                <font>
                    <Font size="15.0" />
                </font>
@@ -46,7 +46,7 @@
                    <Image url="@../images/energy.png" />
                </image>
            </ImageView>
-           <Button layoutX="419.0" layoutY="315.0" mnemonicParsing="false" prefHeight="0.0" prefWidth="106.0" text="Buy Energy">
+           <Button fx:id= "energyButton" layoutX="419.0" layoutY="315.0" mnemonicParsing="false" prefHeight="0.0" prefWidth="106.0" text="Buy Energy">
                <font>
                    <Font size="15.0" />
                </font>
@@ -67,7 +67,7 @@
                    <Image url="@../images/smithore.png" />
                </image>
            </ImageView>
-           <Button layoutX="708.0" layoutY="315.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="119.0" text="Buy Smithore">
+           <Button fx:id= "smithoreButton" layoutX="708.0" layoutY="315.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="119.0" text="Buy Smithore">
                <font>
                    <Font size="15.0" />
                </font>
@@ -88,7 +88,7 @@
                    <Image url="@../images/crystite.png" />
                </image>
            </ImageView>
-           <Button layoutX="148.0" layoutY="638.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="119.0" text="Buy Crystite">
+           <Button fx:id= "crystiteButton" layoutX="148.0" layoutY="638.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="119.0" text="Buy Crystite">
                <font>
                    <Font size="15.0" />
                </font>
@@ -109,13 +109,19 @@
                    <Image url="@../images/horse.png" />
                </image>
            </ImageView>
-           <Button layoutX="448.0" layoutY="638.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="119.0" text="Buy Crystite">
+           <Button fx:id= "muleButton" layoutX="448.0" layoutY="638.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="119.0" text="Buy Crystite">
                <font>
                    <Font size="15.0" />
                </font>
            </Button>
 
-           <Button layoutX="721.0" layoutY="628.0" mnemonicParsing="false" onAction="#goToMap" text="Back to Town">
+           <Button fx:id= "toMap"  layoutX="721.0" layoutY="628.0" mnemonicParsing="false" onAction="#goToMap" text="Back to Town">
+               <font>
+                   <Font size="24.0" />
+               </font>
+           </Button>
+
+           <Button fx:id= "changeState" layoutX="710.0" layoutY="500.0" mnemonicParsing="false" onAction="#changeState" text="Change To Sell">
                <font>
                    <Font size="24.0" />
                </font>
