--- a/src/main/resources/fxml/Map.fxml
+++ b/src/main/resources/fxml/Map.fxml
@@ -41,6 +41,11 @@
             <Font size="24.0" />
          </font>
       </Button>
+       <Button fx:id="save" layoutX="800.0" layoutY="648.0" mnemonicParsing="false" onAction="#saveButtonClicked" prefHeight="43.0" prefWidth="146.0" text="Save">
+           <font>
+               <Font size="24.0" />
+           </font>
+       </Button>
       <Label fx:id="playerLabel" alignment="TOP_CENTER" contentDisplay="CENTER" layoutX="1090.0" layoutY="27.0" prefHeight="122.0" prefWidth="146.0" text="Player 1" textFill="WHITE" wrapText="true">
          <font>
             <Font size="24.0" />
